001-ingress-gw.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sni-ingress-gw
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway-sni
  namespace: sni-ingress-gw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-ingressgateway-sni
      istio: istio-ingressgateway-sni
  template:
    metadata:
      annotations:
        # This is required to tell Anthos Service Mesh to inject the gateway with the
        # required configuration.
        inject.istio.io/templates: gateway
      labels:
        app: istio-ingressgateway-sni
        istio: istio-ingressgateway-sni
    spec:
      # Allow binding to all ports (such as 80 and 443)
      securityContext:
        sysctls:
          - name: net.ipv4.ip_unprivileged_port_start
            value: "0"
      containers:
      - name: istio-proxy
        image: auto # The image will automatically update each time the pod starts.
        resources:
          limits:
            cpu: 2000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi
      serviceAccountName: istio-ingressgateway-sni
---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-sni
  namespace: sni-ingress-gw
  labels:
    app: istio-ingressgateway-sni
    istio: istio-ingressgateway-sni
spec:
  ports:
  # status-port exposes a /healthz/ready endpoint that can be used with GKE Ingress health checks
  - name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
  # Any ports exposed in Gateway resources should be exposed here.
  - name: http2
    port: 80
  - name: https
    port: 443
  selector:
    istio: istio-ingressgateway-sni
    app: istio-ingressgateway-sni
  type: LoadBalancer
