003-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sni-test-gw
  namespace: sni-ingress-gw
spec:
  selector:
    istio: istio-ingressgateway-sni
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: ssltest-benmaynard-co-uk
    hosts:
    - "*"
