004-nginx-a.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-a
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-a
  namespace: nginx-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-a
  template:
    metadata:
      labels:
        app: nginx-a
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: custom-html
          mountPath: /usr/share/nginx/html/index.html
          subPath: custom-index.html
      volumes:
      - name: custom-html
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-a
  namespace: nginx-a
spec:
  selector:
    app: nginx-a
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-a
  namespace: nginx-a
spec:
  hosts:
    - "nginx-a.benmaynard.co.uk"
  gateways:
  - sni-ingress-gw/sni-test-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nginx-a
        port:
          number: 80
